	*main.c: Added Up Arrow key functionality, it only works because I re-implemented the enter key so it fills unused space in each line of the terminal with a null character - which are stripped anyway in the saving function.
	Added Left Arrow Key functionality.  It moves back one space.
	With the addition of Right and down Arrow Keys, I have now completed the addition of arrow key functionality.

	*CHANGELOG: Documented recent changes.
	Fixed a typo with the date from yesterday.

2019-04-01 James Phillips <james@jamesphillipsuk.com>
	*main.c: Modified initialiseTextFile() for memory efficiency.
	Modified rewriteFile() so it doesn't close NCurses and hide our output until we give it a character.
	Minor alterations to comments and code cleanliness.
	Modified getFileContents() so it doesn't get null data before the start of the file, or crash at the end.
	Implemented input checking to save inputted text to a file - because recognition of the control modifier from NCURSES caused some runtime errors, I'm using F1 and F2 for save and exit respectively.  I've updated this in the How To notice as well.
	Added Backspace functionality, using NCurses KEY_BACKSPACE and an alternative value which - together - should work for most keyboards.

	*CHANGELOG: Documented recent changes.

2019-03-31 James Phillips <james@jamesphillipsuk.com>
	*main.c: Included ncurses.h for the text editing interface.
	Implemented NCurses in the rewriteFile() function.
	Renamed printFile() to getFileContents() - it no longer needs to print the file, but it does still need to get the file's contents.
	Moved file content printing to rewriteFile() as it can do so via NCurses, I'll probably separate this out again later.
	Removed auto-filling files with Hello World message as I'm preparing to do the function to allow users to write a message.

	*CHANGELOG: Documented recent changes.

2019-03-29 James Phillips <james@jamesphillipsuk.com>